--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -11,6 +11,7 @@
         <ion-router-outlet></ion-router-outlet>
       </ion-col>
       <ion-col size="6">
+        <div>abc</div>
         <app-d></app-d>
       </ion-col>
     </ion-row>
