--- a/src/app/components/d/d.component.html
+++ b/src/app/components/d/d.component.html
@@ -8,7 +8,7 @@
   <ion-card>
     <ion-card-header>
       <ion-card-subtitle>
-        This is D component
+        This is D component added
       </ion-card-subtitle>
     </ion-card-header>
     <ion-card-content>
